tests/issues-OLD/test020.expected
Error: syntax error, near 's', operator expected, /home/andrew/trealla/tests/issues-OLD/test020.pl:4
